fixed editor white space overflow

--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -17,16 +17,21 @@ body {
 .app-container {
 	height: 100%;
 	width: 100%;
+
+	display: flex;
+	flex-direction: column;
+	overflow: hidden;
 }
 
 .app-navbar {
 	@extend .navbar;
+	@extend .navbar-expand-sm;
+	@extend .navbar;
 	@extend .h6;
 
 	background-color: $bright-green;
-	margin-bottom: 5px;
+	margin: 0px;
 	padding: 2px;
-
 }
 
 .navbar-brand {
@@ -38,4 +43,10 @@ body {
 		cursor: pointer;
 	}
 	margin: 0px 5px 0px 5px;
+}
+
+.editor-container {
+	flex-grow: 1;
+	margin-top: 5px;
+	margin-bottom: 5px;
 }
